# codemap

./: .gitignore  pyproject.toml
codemap/: __init__.py  __main__.py  analyze.py  build.py  cache.py  cluster.py  detect.py  export.py  extract_js.py  extract_python.py  extract_style.py  extract_template.py  extract_vue.py  filetype.py  graph_primitives.py  ignore.py  manifest.py  report.py  resolve.py  security.py
codemap/frappe_extract/: __init__.py  _common.py  customizations.py  dashboard.py  doctype.py  hooks.py  modules.py  notification.py  record.py  scripts.py  workflow.py
tests/: test_analyze.py  test_build.py  test_cache.py  test_cluster.py  test_detect.py  test_export.py  test_extract_js.py  test_extract_python.py  test_extract_style.py  test_extract_template.py  test_extract_vue.py  test_frappe_extract.py  test_report.py
tests/fixtures/sample_app/: .codemapignore  README.md  setup.py
tests/fixtures/sample_app/frontend/src/: App.vue
tests/fixtures/sample_app/test_app/: __init__.py  credentials.env  hooks.py  modules.txt  patches.txt
tests/fixtures/sample_app/test_app/controllers/: selling_controller.py
tests/fixtures/sample_app/test_app/fixtures/: custom_field.json  property_setter.json
tests/fixtures/sample_app/test_app/selling/client_script/highlight_total/: highlight_total.json
tests/fixtures/sample_app/test_app/selling/doctype/sales_order/: sales_order.js  sales_order.json  sales_order.py  sales_order_dashboard.py  (+1 more)
tests/fixtures/sample_app/test_app/templates/pages/: order.html
tests/fixtures/sample_app/test_app/utils/: jobs.py
(+6 files in other folders)
